--- a/package.json
+++ b/package.json
@@ -1,32 +1,47 @@
 {
-  "name": "tea",
+  "name": "my-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "build-gp": "ng build --output-path docs",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
+    "@angular/cdk": "^13.0.0",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
     "@angular/forms": "^14.2.0",
+    "@angular/material": "^13.0.0",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@popperjs/core": "^2.10.2",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.3.8",
+    "hover.css": "^2.3.2",
+    "jquery-ui": "^1.14.1",
+    "jquery-ui-dist": "^1.13.3",
+    "magnific-popup": "^1.2.0",
     "rxjs": "~7.5.0",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.13",
-    "@angular/cli": "~14.2.13",
+    "@angular-devkit/build-angular": "^14.2.5",
+    "@angular/cli": "~14.2.5",
     "@angular/compiler-cli": "^14.2.0",
+    "@angular/localize": "^14.2.5",
     "@types/jasmine": "~4.0.0",
+    "@types/node": "^20.11.30",
+    "http-serve": "^1.0.1",
+    "http-server": "^14.1.1",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
