--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "build-gp": "ng build --output-path docs",
+    "build-gp": "ng build --output-path docs --base-href /TeaAngular/",
     "test": "ng test"
   },
   "private": true,
